# UNION

./: .gitattributes  LICENSE  README.md  README.txt
FractalCreator/: .gitignore  CMakeLists.txt
FractalCreator/docs/: README.md  WINDOWS_BUILD_GUIDE.docx
FractalCreator/src/: CMakeLists.txt  main.cpp
FractalCreator/src/Mutator/: MutatorUniversal.cpp  MutatorUniversal.h
FractalCreator/src/core/: Application.cpp  Application.h  FractalCreator.cpp  Window.cpp  Window.h
FractalCreator/src/evolution/: GeneticEvolutionEngine.cpp  GeneticEvolutionEngine.h
FractalCreator/src/fractals/: BaseFractal .cpp  BaseFractal.cpp  BaseFractal.h  DeformableFractal.cpp  DeformableFractal.h  Mandelbrot.cpp  Mandelbrot.h
FractalCreator/src/generation/: FractalGenerator.cpp  FractalGenerator.h  FractalTypes.h  ProceduralFractalGenerator.cpp
FractalCreator/src/gui/: FractalMutator.cpp  Serialization.hpp
FractalCreator/src/math/: Complex.cpp  Complex.h
FractalCreator/src/rendering/: FractalRenderer.cpp  FractalRenderer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
FractalExplorer/: Manifest.toml  Project.toml  main.jl
FractalExplorer/src/: FractalExplorer.jl  communication.jl  fractal_analysis.jl
Launcher/: CMakeLists.txt  README.md  compile.bat  main.cpp
Nexo/: cargo.toml
Nexo/shared/: ecosystem_report.json
Nexo/src/: analysis.rs  communication.rs  ecosystem.rs  main.rs  strategies.rs
Raven/: README.md  main.py
Raven/core/: ai_integration.py  folder_analyzer.py  fractal_interpreter.py  free_learning.py  hausdorff_extractor.py  knowledge_base.py  pattern_classifier.py  raven_universal.py  training_mode.py
Raven/data/processed/: improvement_report_31072025_182906.json  raven_learning.json
Raven/data/processed/09082025_analyzed_1/: capture_154241.json
Raven/data/processed/09082025_analyzed_2/: capture_154524.json
Raven/data/processed/27072025_analyzed_1/: fractal_27072025_1.json  fractal_27072025_10.json  fractal_27072025_100.json  fractal_27072025_101.json  fractal_27072025_11.json  fractal_27072025_12.json  fractal_27072025_13.json  fractal_27072025_14.json  fractal_27072025_15.json  fractal_27072025_16.json  fractal_27072025_17.json  fractal_27072025_18.json  fractal_27072025_19.json  fractal_27072025_2.json  fractal_27072025_20.json  fractal_27072025_21.json  fractal_27072025_22.json  fractal_27072025_23.json  fractal_27072025_24.json  fractal_27072025_25.json  fractal_27072025_26.json  fractal_27072025_27.json  fractal_27072025_28.json  fractal_27072025_29.json  fractal_27072025_3.json  fractal_27072025_30.json  fractal_27072025_31.json  fractal_27072025_32.json  fractal_27072025_33.json  fractal_27072025_34.json  fractal_27072025_35.json  fractal_27072025_36.json  fractal_27072025_37.json  fractal_27072025_38.json  fractal_27072025_39.json  fractal_27072025_4.json  fractal_27072025_40.json  fractal_27072025_41.json  fractal_27072025_42.json  fractal_27072025_43.json  (+61 more)
